Fix forced high contrast mode

--- a/src/components/ResultDialog.css
+++ b/src/components/ResultDialog.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-items: center;
-  border: none;
+  border: 1px solid transparent;
   border-radius: 0.5rem;
   padding: 1.5rem;
   width: clamp(15rem, 95vw, 25rem);
@@ -107,6 +107,7 @@
   border: none;
   border-radius: 50%;
   cursor: pointer;
+  forced-color-adjust: none;
 
   &:hover {
     background: hsl(0 0% 50% / 0.3);
@@ -137,7 +138,7 @@
   height: 3rem;
   text-decoration: none;
   text-transform: uppercase;
-  border: none;
+  border: 1px solid transparent;
   color: currentColor;
   padding: 0.5rem 1rem;
   border-radius: 0.25rem;
@@ -199,6 +200,7 @@
   mask: var(--check-svg) no-repeat center center / contain;
   background-color: hsl(150 50% 50% / 0.7);
   animation: appear 0.6s ease-in-out;
+  forced-color-adjust: none;
 }
 
 @keyframes appear {
@@ -228,6 +230,7 @@
     text-align: right;
     background-color: var(--distribution-bar-bg);
     border-radius: 1px;
+    border: 1px solid transparent;
 
     --bar-bg-opacity: 0.7;
     @nest [data-theme='dark'] & {
